Layout issues on Dashboard resolved. Handled some z-index problems with Menu

--- a/src/components/widgets/Menu/Menu.scss
+++ b/src/components/widgets/Menu/Menu.scss
@@ -8,9 +8,9 @@
   flex-direction: column;
   justify-content: center;
   background: $brown;
-  height: 100%;
+  height: 80vh;
   text-align: left;
-  padding: 2rem;
+  padding: 20vh 2rem;
   position: absolute;
   top: 0;
   right: 0;
@@ -23,11 +23,11 @@
   }
 
   a {
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-transform: uppercase;
-    padding: 2rem 0;
+    padding: 1rem 0;
     font-weight: bold;
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.25rem;
     color: $white;
     text-decoration: none;
     transition: all 0.3s linear;
